tests/functional/cases/pass/test_floats.coil
test: {
  a: .123
  b: 0.123
  c: -.123
  d: -0.123
}

expected: {
  a: 0.123
  b: 0.123
  c: -0.123
  d: -0.123
}
