tests/functional/cases/fail/test_extends_badpath.coil
a.b.c: 123
bad_extends: invalid_path {}
